force-app/main/default/objects/Activity/fields/arpedio_AccountGoalIndex__c.field-meta.xml
<CustomField>
    <fullName>arpedio_AccountGoalIndex__c</fullName>
    <externalId>true</externalId>
    <label>Account Goal Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>