force-app/main/default/objects/Activity/fields/AssignedTo_BU__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo_BU__c</fullName>
    <description>Business Unit of Assigned To user. For reporting</description>
    <formula>TEXT( Owner:User.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AssignedTo BU</label>
    <type>Text</type>
</CustomField>