force-app/main/default/objects/Activity/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show if the Event is Completed or not (Sweden only)</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>