force-app/main/default/objects/Activity/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <description>For reporting, test of 11.04.2023</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>