force-app/main/default/objects/Activity/fields/Created_by_BU__c.field-meta.xml
<CustomField>
    <fullName>Created_by_BU__c</fullName>
    <formula>TEXT( CreatedBy.Business_Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by BU</label>
    <type>Text</type>
</CustomField>