force-app/main/default/objects/Activity/fields/Created_From_Api__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Api__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created From Api</label>
    <type>Checkbox</type>
</CustomField>