force-app/main/default/objects/Activity/fields/Days_From_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Activity_Date__c</fullName>
    <formula>ActivityDate - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days From Activity Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>