force-app/main/default/objects/Activity/fields/Deletion_Date__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Date__c</fullName>
    <label>Deletion Date</label>
    <type>Date</type>
</CustomField>