force-app/main/default/objects/Activity/fields/DPS_Hunting__c.field-meta.xml
<CustomField>
    <fullName>DPS_Hunting__c</fullName>
    <formula>Account.DPS_Hunting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DPS Hunting</label>
    <type>Checkbox</type>
</CustomField>