force-app/main/default/objects/Activity/fields/Executive_Advisory_Driving__c.field-meta.xml
<CustomField>
    <fullName>Executive_Advisory_Driving__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executive Advisory Driving</label>
    <type>Checkbox</type>
</CustomField>