force-app/main/default/objects/Activity/fields/Is_related_to_active_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_related_to_active_opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is used by Opportunity Overview</description>
    <label>Is related to active opportunity</label>
    <type>Checkbox</type>
</CustomField>