force-app/main/default/objects/Activity/fields/Opportunity_Overview_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Overview_Id__c</fullName>
    <label>Opportunity Overview Id</label>
    <type>TextArea</type>
</CustomField>